fix scrollbar color

--- a/app/globals.css
+++ b/app/globals.css
@@ -15,11 +15,11 @@ body {
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #aeaeae;
+  background: #a0a0a0;
   border: 3px solid #1e1e24;
   border-radius: 14px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: #7b7b7b;
+  background: #cecece;
 }
